Fix layout issues
- Increase the body bottom padding
- Remove unnecessary options from the datepicker

IoT.js-Test-Results-DCO-1.0-Signed-off-by: Imre Kiss kissi.szeged@partner.samsung.com

--- a/public/style/index.scss
+++ b/public/style/index.scss
@@ -24,7 +24,7 @@ html {
 
 body {
   padding-top: 56px;
-  padding-bottom: 48px;
+  padding-bottom: 150px;
 }
 
 .footer {
@@ -32,7 +32,6 @@ body {
   bottom: 0;
   width: 100%;
   min-height: 48px;
-  line-height: 48px;
 }
 
 .btn-light.focus, .btn-light:focus,
